agregando el sidecard

--- a/pages/wikipedia.html
+++ b/pages/wikipedia.html
@@ -77,7 +77,98 @@
                         <p>El <a href="/wiki/1_de_enero" title="1 de enero">1 de enero</a> de <a href="/wiki/1862" title="1862">1862</a>, el General confederado Stonewall Jackson condujo a sus hombres desde <a href="/wiki/Winchester_(Virginia)" title="Winchester (Virginia)">Winchester</a> a <a href="/wiki/Bath_(Virginia_Occidental)" title="Bath (Virginia Occidental)">Bath</a> en un intento de interrumpir el tráfico del Baltimore and Ohio Railroad y el Chesapeake and Ohio Canal. Los hombres de Jackson llegaron al <a href="/wiki/R%C3%ADo_Potomac" title="Río Potomac">río Potomac</a>, frente a la ciudad de guarnición de <a href="/wiki/Hancock_(Maryland)" title="Hancock (Maryland)">Hancock</a>, Maryland el 5 de enero, después de una escaramuza con los soldados de la Unión.<sup id="cite_ref-NPS1_1-3" class="reference separada"><a href="#cite_note-NPS1-1"><span class="corchete-llamada">[</span>1<span class="corchete-llamada">]</span></a></sup>​ La artillería de Jackson abrió fuego contra la ciudad desde la Colina Orrick, pero solo sufrió daños de menor importancia. El comandante unionista de la guarnición, brigadier general <a href="/w/index.php?title=Frederick_W._Lander&amp;action=edit&amp;redlink=1" class="new" title="Frederick W. Lander (aún no redactado)">Frederick W. Lander</a>, se negó a aceptarle la rendición a Jackson. Quien continuó los bombardeos por dos días, mientras buscaba sin éxito una forma segura de cruzar el río. El <a href="/wiki/7_de_enero" title="7 de enero">7 de enero</a>, los soldados confederados se retiraron y partieron  a <a href="/wiki/Romney_(Virginia_Occidental)" title="Romney (Virginia Occidental)">Romney</a>, Virginia Occidental.<sup id="cite_ref-NPS1_1-4" class="reference separada"><a href="#cite_note-NPS1-1"><span class="corchete-llamada">[</span>1<span class="corchete-llamada">]</span></a></sup>​ 
                         </p>
                     </article>
-                    <aside class="l4-sidecard"></aside>
+                    <aside class="l4-sidecard">
+                        <table class="myTable" style="width:312px">
+                            <tbody>
+                                <tr><th colspan="3" class="sidecard-title sidecard-titles">
+                                    Batalla de Hancock
+                                </th></tr>
+                                <tr><td colspan="3" class="l5-sidecard-subtitle">
+                                    <a class="wp-link" href="">Guerra Civil Estadounidense</a>
+                                    <br>
+                                    Parte de 
+                                    <a class="wp-link" href="">Guerra de Secesión</a>
+                                </td></tr>
+                                <tr>
+                                    <th scope="row" class="sidecard-firstRow">Fecha</th>
+                                    <td colspan="3">
+                                        <a class="wp-link">5 de enero</a>
+                                         de 
+                                        <a class= "wp-link" href="/wiki/1862" title="1862">1862</a>
+                                         - 
+                                         <a class="wp-link">6 de enero</a>
+                                         de 1862
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="sidecard-firstRow">Lugar</th>
+                                    <td colspan="2">
+                                        Washington, Maryland y Morgan, Virginia Occidental, Estados Unidos
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="sidecard-firstRow">
+                                        <a class="wp-link" class="sidecard-firstRow">Coordenadas</a>
+                                    </th>
+                                    <td colspan="2">
+                                        <img src="//upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Erioll_world.svg/15px-Erioll_world.svg.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Erioll_world.svg/15px-Erioll_world.svg.png 1x, //upload.wikimedia.org/wikipedia/commons/thumb/5/55/WMA_button2b.png/34px-WMA_button2b.png 2x" class="wmamapbutton noprint" title="Mostrar el lugar en un mapa interactivo" alt="" style="padding: 0px 3px 0px 0px; cursor: pointer;">
+                                        <a class="wp-link" href="http://tools.wmflabs.org/geohack/geohack.php?language=es&amp;pagename=Batalla_de_Hancock&amp;params=39.6957_N_-78.177_E_type:event" style="white-space: normal;"><span class="geo-default"><span class="geo-dms" title="Mapas, fotos y otros datos de 39°41′45″N 78°10′37″O"><span class="latitude">39°41′45″N </span><span class="longitude">78°10′37″O</span></span></span><span class="geo-multi-punct">﻿ / ﻿</span><span class="geo-nondefault"><span class="geo-dec" title="Mapas, fotos y otros datos de 39.6957 -78.177"><span class="geo"><span class="latitude">39.6957, </span><span class="longitude">-78.177</span></span></span></span></a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th scope="row" class="sidecard-firstRow">Resultado</th>
+                                    <td colspan="2">Inconcluso</td>
+                                </tr>
+                                <tr>
+                                    <th colspan="3" class="sidecard-titles">Beligerantes</th>
+                                </tr>
+                                <tr>
+                                    <td colspan=3>
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <a href="/wiki/Estados_Unidos_de_Am%C3%A9rica" class="wp-link" title="Estados Unidos de América">Estados Unidos de América</a>
+                                                    </td>
+                                                    <td>
+                                                        <a href="/wiki/Estados_Confederados_de_Am%C3%A9rica" class="wp-link" title="Estados Confederados de América">Estados Confederados de América</a>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th colspan="3" class="sidecard-titles">Comandantes</th>
+                                </tr>
+                                <tr>
+                                    <td colspan="3">
+                                        <table>
+                                            <tbody>
+                                                <tr>
+                                                    <td>
+                                                        <a class="wp-link unvisited-link">Frederick W. Lander</a>
+                                                    </td>
+                                                    <td>
+                                                        <a class="wp-link"> Thomas J. Jackson</a>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th colspan="3" class="sidecard-titles">Mapa</th>
+                                </tr>
+                                <tr>
+                                    <th>
+                                        <a href="/wiki/Archivo:USA_Maryland_location_map.svg" class="mw-file-description"><img alt="Batalla de Hancock ubicada en Maryland" src="//upload.wikimedia.org/wikipedia/commons/thumb/9/90/USA_Maryland_location_map.svg/285px-USA_Maryland_location_map.svg.png" decoding="async" width="285" height="181" class="mw-file-element" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/9/90/USA_Maryland_location_map.svg/428px-USA_Maryland_location_map.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/9/90/USA_Maryland_location_map.svg/570px-USA_Maryland_location_map.svg.png 2x" data-file-width="1200" data-file-height="764"></a>
+                                    </th>
+                                </tr>
+                                <tr></tr>
+                            </tbody>
+                        </table>
+                    </aside>
                     <article class="l4-refs"></article>
                 </div>
                 <div class="l3-footerlinks">
